--- a/src/main/webapp/include/dialog/add.xhtml
+++ b/src/main/webapp/include/dialog/add.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html" 
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:p="http://primefaces.org/ui" >
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -15,23 +15,25 @@
        showEffect="fade" hideEffect="explode">
        
 			<h:form id="formAdd">
-				<h:panelGrid columns="2">	
+				<h:panelGrid id="gridAdd" columns="2">	
 					
 					<h:outputLabel value="Nome:" for="nome"/>
-					<h:inputText id="nome" maxlength="100" size="30" />	
+					<h:inputText id="nome" value="#{agendaBean.contato.nome}" maxlength="100" size="30" />	
 		
 					<h:outputLabel value="Telefone:" for="telefone"/>
-					<h:inputText id="telefone" maxlength="13" size="30" />
+					<h:inputText id="telefone" value="#{agendaBean.contato.telefone}" maxlength="13" size="30" />
 					
 					<h:outputLabel value="Email:" for="email"/>
-					<h:inputText id="email" maxlength="100" size="30" />
+					<h:inputText id="email" value="#{agendaBean.contato.email}" maxlength="100" size="30" />
 					
 					<h:outputLabel value="Senha Wifi:" for="wifi"/>
-					<h:inputText id="wifi" maxlength="16" size="30" />
+					<h:inputText id="wifi" value="#{agendaBean.contato.senhaWifi}" maxlength="16" size="30" />
 					
 				</h:panelGrid>
 				<h:panelGrid columns="2">
-					<p:commandButton value="Salvar" />									
+					<p:commandButton value="Salvar" actionListener="#{agendaBean.save}" 
+					    update=":status :formAdd:gridAdd :formTable:table" 
+					    oncomplete="PF('addContato').hide();"/>									
 					<p:commandButton value="Cancelar" onclick="PF('addContato').hide();"/>
 				</h:panelGrid>
 			</h:form>
