--- a/src/main/webapp/include/dialog/merge_contato.xhtml
+++ b/src/main/webapp/include/dialog/merge_contato.xhtml
@@ -9,7 +9,7 @@
 </h:head>
 <h:body>
 
-   <p:dialog header="Novo Contato" widgetVar="mergeContato" 
+   <p:dialog header="Contato" widgetVar="mergeContato" 
        draggable="false" resizable="false" 
        modal="true" appendTo="@(body)"
        showEffect="fade" hideEffect="explode">
